; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_rtclock_native.c_rtc_lapic_set_timer.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_rtclock_native.c_rtc_lapic_set_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@busFCvtn2t = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@one_shot = common dso_local global i32 0, align 4
@divide_by_1 = common dso_local global i32 0, align 4
@DECR_SET_APIC_DEADLINE = common dso_local global i32 0, align 4
@DBG_FUNC_NONE = common dso_local global i32 0, align 4
@TIMER_CURRENT_COUNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @rtc_lapic_set_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @rtc_lapic_set_timer(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  store i64 0, i64* %6, align 8
  %7 = load i64, i64* %3, align 8
  %8 = icmp sgt i64 %7, 0
  br i1 %8, label %9, label %21

9:                                                ; preds = %2
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* %4, align 8
  %12 = call i64 @deadline_to_decrementer(i64 %10, i64 %11)
  store i64 %12, i64* %5, align 8
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* %5, align 8
  %15 = add nsw i64 %13, %14
  store i64 %15, i64* %6, align 8
  %16 = load i64, i64* %5, align 8
  %17 = load i32, i32* @busFCvtn2t, align 4
  %18 = call i64 @tmrCvt(i64 %16, i32 %17)
  %19 = trunc i64 %18 to i32
  %20 = call i32 @lapic_set_timer_fast(i32 %19)
  br label %26

21:                                               ; preds = %2
  %22 = load i32, i32* @FALSE, align 4
  %23 = load i32, i32* @one_shot, align 4
  %24 = load i32, i32* @divide_by_1, align 4
  %25 = call i32 @lapic_set_timer(i32 %22, i32 %23, i32 %24, i32 0)
  br label %26

26:                                               ; preds = %21, %9
  %27 = load i32, i32* @DECR_SET_APIC_DEADLINE, align 4
  %28 = load i32, i32* @DBG_FUNC_NONE, align 4
  %29 = or i32 %27, %28
  %30 = load i64, i64* %4, align 8
  %31 = load i64, i64* %3, align 8
  %32 = load i64, i64* %6, align 8
  %33 = load i32, i32* @TIMER_CURRENT_COUNT, align 4
  %34 = call i32 @LAPIC_READ(i32 %33)
  %35 = call i32 @KERNEL_DEBUG_CONSTANT(i32 %29, i64 %30, i64 %31, i64 %32, i32 %34, i32 0)
  %36 = load i64, i64* %6, align 8
  ret i64 %36
}

declare dso_local i64 @deadline_to_decrementer(i64, i64) #1

declare dso_local i32 @lapic_set_timer_fast(i32) #1

declare dso_local i64 @tmrCvt(i64, i32) #1

declare dso_local i32 @lapic_set_timer(i32, i32, i32, i32) #1

declare dso_local i32 @KERNEL_DEBUG_CONSTANT(i32, i64, i64, i64, i32, i32) #1

declare dso_local i32 @LAPIC_READ(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
